# clover

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.py
benchmarks/Linear/c/: 147.c  165.c  17.c  19.c  67.c
benchmarks/Linear/c_branches/: 103_branches.txt  107_branches.txt  108_branches.txt  111_branches.txt  118_branches.txt  121_branches.txt  125_branches.txt  129_branches.txt  130_branches.txt  132_branches.txt  133_branches.txt  134_branches.txt  135_branches.txt  144_branches.txt  145_branches.txt  146_branches.txt  147_branches.txt  148_branches.txt  151_branches.txt  152_branches.txt  153_branches.txt  154_branches.txt  155_branches.txt  157_branches.txt  159_branches.txt  15_branches.txt  162_branches.txt  164_branches.txt  165_branches.txt  169_branches.txt  171_branches.txt  173_branches.txt  174_branches.txt  175_branches.txt  177_branches.txt  178_branches.txt  181_branches.txt  182_branches.txt  183_branches.txt  185_branches.txt  (+91 more)
benchmarks/Multiphase/c/: 1.c  10.c  11.c  12.c  13.c  14.c  15.c  16.c  17.c  18.c  19.c  2.c  20.c  21.c  22.c  23.c  24.c  25.c  26.c  27.c  28.c  29.c  3.c  30.c  31.c  32.c  33.c  34.c  35.c  36.c  37.c  38.c  39.c  4.c  40.c  41.c  42.c  43.c  44.c  45.c  (+14 more)
benchmarks/Multiphase/c_branches/: 10_branches.txt  11_branches.txt  13_branches.txt  (+44 more)
result/: linear_results.json  multiphase_results.json  nonlinear_results.json
src/: models.py
src/core/: __init__.py  base.py  c_inv_checker.py  dnf_normalizer.py  dnf_utils_with_tests.py  loop.py
src/search/: bfs.py
src/templates/: loop.py
(+194 files in other folders)
